--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "app-node-versioning-test",
-  "version": "1.1.0",
+  "name": "versioning-test",
+  "version": "1.2.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
